--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,28 @@
         <input type="text" placeholder="quote" name="quote">
         <button type="submit">Submit</button>
     </form>
+    <h2> Quotes </h2>
+
+    <ul class="quotes">
+    <!-- Loop through quotes -->
+        <% for(var i = 0; i < quotes.length; i++) {%>
+            <li class="quote">
+            <!-- Output name from the iterated quote object -->
+            <span><%= quotes[i].name %></span>:
+            <!-- Output quote from the iterated quote object -->
+            <span><%= quotes[i].quote %></span>
+            </li>
+        <% } %>
+    </ul>
+
+    <div>
+        <h2>Quotes Update!</h2>
+        <p>
+            Replace first quote with a quote written by other
+        </p>
+        <button id="update-button">Replace quote</button>
+    </div>
+
+    <script src="/main.js"></script>
 </body>
 </html>
