--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,16 @@
         <button id="update-button">Replace quote</button>
     </div>
 
+    <div>
+        <h2>Remove quote!</h2>
+        <p>
+            Delete one quote. Does nothing if there are no more Darth
+            Vader's quote
+        </p>
+        <button id="delete-button">Delete quote</button>
+    </div>
+    <div id="message"></div>
+
     <script src="/main.js"></script>
 </body>
 </html>
